--- a/app/src/styles/dashboard/dashboardStrip.sass
+++ b/app/src/styles/dashboard/dashboardStrip.sass
@@ -35,6 +35,7 @@
 
         .colorInput 
             max-width: 100%
+            width: 100%
             display: flex
             align-items: center
             justify-content: center
