--- a/app/src/styles/index.sass
+++ b/app/src/styles/index.sass
@@ -1,5 +1,5 @@
 html, body, #app 
     background: #202124
 *
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important
     color: white
