--- a/app/src/styles/dashboard/preset.sass
+++ b/app/src/styles/dashboard/preset.sass
@@ -1,30 +1,37 @@
 
 #app.dashboard
-    .preset
-        cursor: pointer
-        background: #2d2d2d
-        border-radius: 20px
-        padding: 2rem
-        display: flex
-        align-items: center
-        justify-content: center
-        flex-direction: column
-        h2 
-            white-space: nowrap
-            font-size: 1.2rem
-        .previewContainer
-                height: 5px
-                width: 100%
-                border-radius: 20px
-                overflow: hidden
-        .preview
-            height: 100%
-            width: 100%
-            filter: blur(0px)
-            opacity: 0
-            transition: all .3s ease-in-out
-        &:hover 
-            .preview
-                opacity: 1
+    .presetContainer
+        .preset
+            cursor: pointer
+            background: #2d2d2d
+            border-radius: 20px
+            padding: 2rem
+            display: flex
+            align-items: center
+            justify-content: center
+            flex-direction: column
+            transition: outline .2s ease-in-out
+            
+            outline: 0px solid transparent
+            &.active 
+                outline: 3px solid #00a8b4
 
-        
+            h2 
+                white-space: nowrap
+                font-size: 1.2rem
+            .previewContainer
+                    height: 5px
+                    width: 100%
+                    border-radius: 20px
+                    overflow: hidden
+            .preview
+                height: 100%
+                width: 100%
+                filter: blur(0px)
+                opacity: 0
+                transition: all .3s ease-in-out
+            &:hover 
+                .preview
+                    opacity: 1
+
+            
