fix default styles overwriting ability to give svgs color

--- a/app/src/styles/index.sass
+++ b/app/src/styles/index.sass
@@ -1,5 +1,11 @@
-html, body, #app 
+html, body, #root, #app 
     background: #202124
+    margin: 0
+    height: 100%
+    width: 100%
 *
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important
     color: white
+
+svg * 
+    color: unset
