--- a/app/src/styles/effectsOverview.sass
+++ b/app/src/styles/effectsOverview.sass
@@ -1,4 +1,8 @@
 #app.effectsOverview
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-direction: column
     div.backButton
         position: absolute
         top: 20px
@@ -12,16 +16,13 @@
             height: 50px
             margin: 0
 
-            span 
+            span
                 display: flex
                 justify-content: center
                 align-items: flex-start
+                flex-wrap: nowrap
+                flex-direction: row
                 gap: 10px
-
-    display: flex
-    align-items: center
-    justify-content: center
-    flex-direction: column
     @media screen and (max-width: 600px)
         h1
             margin-top: 12vh
@@ -49,8 +50,8 @@
                 h2
                     margin: 0
                 button
-                    height: 40px 
-                    width:  40px
+                    height: 40px
+                    width: 40px
                     padding: 0
                     opacity: 0
                     transition: opacity .2s ease-in-out
@@ -68,7 +69,7 @@
                 transition: all .2s ease-in-out
                 height: 0
                 opacity: 0
-            &:hover 
+            &:hover
                 animation: unset
                 .header button
                     opacity: 1
@@ -76,3 +77,14 @@
                     transition: height .2s ease-in-out
                     height: 40px
                     opacity: 1
+            &.addEffect
+                transition: box-shadow .3s ease-in-out
+                box-shadow: 0px 0px 30px #181818
+                cursor: pointer
+                svg
+                    height: 40px
+                    width: 40px
+                    transition: all .2s ease-in-out
+                    color: #999999
+                &:hover svg
+                    color: white
