sliders that are behind others dont need to be rendered

--- a/app/src/styles/slider.sass
+++ b/app/src/styles/slider.sass
@@ -31,6 +31,8 @@
                 border-radius: 10px
             .MuiSlider-rail
                 opacity: 0
+                display: none
             &:last-of-type
                 .MuiSlider-rail
                     opacity: 1
+                    display: block
