--- a/app/src/styles/effectsOverview.sass
+++ b/app/src/styles/effectsOverview.sass
@@ -27,6 +27,7 @@
         h1
             margin-top: 12vh
     .effectsContainer
+        padding: 2.5%
         display: flex
         align-items: center
         justify-content: center
