--- a/app/src/styles/dashboard/preset.sass
+++ b/app/src/styles/dashboard/preset.sass
@@ -34,7 +34,7 @@
                     opacity: 1
             &:hover 
                 .preview
-                    transition: all 0s ease-in-out
+                    transition: all .1s ease-in-out
                     opacity: 1
 
             
