--- a/app/src/styles/dashboard/musicSyncControls.sass
+++ b/app/src/styles/dashboard/musicSyncControls.sass
@@ -9,19 +9,28 @@
         align-items: center
         justify-content: center
         flex-wrap: warp
-        gap: 10px
+        gap: 20px
         padding: 15px
         background: #2d2d2d
         border-radius: 20px
         .field
             width: min-content
-            &.tapButton
+
+
+            &.button
                 button
                     border: none
                     background: #353535
                     border-radius: 20px
                     padding: 15px 20px
                     font-size: 18px
+                    cursor: pointer
+                    box-shadow: 0px 0px 10px #232323
+                    transition: box-shadow .3s ease-in-out
+                    &:hover
+                        box-shadow: 0px 0px 20px 2px #232323
+                    &:active
+                        background: #3c3c3c
 
             &.bpmDisplay
                 .MuiTextField-root
@@ -31,3 +40,6 @@
             &.timeOptions
                 .MuiFormControlLabel-root
                     margin: 0
+                    button
+                        min-width: 60px
+                        max-width: 60px
