--- a/app/src/styles/dashboard/dashboard.sass
+++ b/app/src/styles/dashboard/dashboard.sass
@@ -61,12 +61,44 @@
 
         #presetsContainer
             margin-top: 30px
+            padding: 0 4%
             display: flex
             align-items: center
             justify-content: center
             flex-direction: row
             flex-wrap: wrap
             // gap: 20px
+            .button
+                width: 100%
+                display: flex
+                align-items: center
+                justify-content: center
+                button
+                    padding: 20px
+                    background: #2d2d2d
+                    border: none
+                    border-radius: 20px
+                    height: 50px
+                    margin: 0
+                    display: flex
+                    align-items: center
+                    justify-content: center
+                    flex-direction: row
+                    gap: 10px
+                    transition: all .3s ease-in-out
+                    flex-basis: 100
+                    cursor: pointer
+                    div.arrow
+                        $size: 10px
+                        $borderSize: 2px
+                        height: $size
+                        width: $size
+                        border-top: $borderSize solid white
+                        border-left: $borderSize solid white
+                        transition: all .3s ease-in-out
+                        transform: translateX(0) translateY(0) rotate(135deg)
+                        &.open
+                            transform: translateX(0) translateY( - calc($size / 3)) rotate(225deg)
 
             .presetContainer
                 $padding: 10px
