--- a/app/src/styles/dashboard/preset.sass
+++ b/app/src/styles/dashboard/preset.sass
@@ -29,6 +29,7 @@
                 width: 100%
                 filter: blur(0px)
                 opacity: 0
+                opacity: 1
                 transition: all .3s .3s ease-in-out
                 @media screen and (max-width: 600px)
                     opacity: 1
