--- a/app/src/styles/dashboard/preset.sass
+++ b/app/src/styles/dashboard/preset.sass
@@ -37,5 +37,6 @@
                 .preview
                     transition: all .1s ease-in-out
                     opacity: 1
-
-            
+        &:last-of-type .preset h2
+            font-size: 30px
+            margin: 0
