--- a/app/src/styles/dashboard/dashboard.sass
+++ b/app/src/styles/dashboard/dashboard.sass
@@ -1,3 +1,5 @@
+@import "../theme"
+
 #app.dashboard
     padding-top: 3rem
     .dashboard
@@ -48,7 +50,7 @@
                     text-decoration: none
                 label
                     padding: 20px
-                    background: #2d2d2d
+                    background: $card
                     border-radius: 20px
                     height: 50px
                     margin: 0
@@ -76,7 +78,7 @@
                 button
                     font-size: 16px
                     padding: 40px 30px
-                    background: #2d2d2d
+                    background: $card
                     border: none
                     border-radius: 20px
                     height: 50px
