--- a/app/src/styles/rgbPicker.sass
+++ b/app/src/styles/rgbPicker.sass
@@ -1,3 +1,5 @@
+@import "theme"
+
 .rgbPickerContainer
     width: 100%
     .rgbPicker
@@ -7,8 +9,8 @@
             opacity: 1!important
 
         #red .MuiSlider-rail
-            background: linear-gradient(to right, #2d2d2d , #ff0000)
+            background: linear-gradient(to right, $card , #ff0000)
         #green .MuiSlider-rail
-            background: linear-gradient(to right, #2d2d2d , #00ff00)
+            background: linear-gradient(to right, $card , #00ff00)
         #blue .MuiSlider-rail
-            background: linear-gradient(to right, #2d2d2d , #0000ff)
+            background: linear-gradient(to right, $card , #0000ff)
