--- a/app/src/styles/dashboard/dashboardStrip.sass
+++ b/app/src/styles/dashboard/dashboardStrip.sass
@@ -1,7 +1,8 @@
+@import "../theme"
+
 #app.dashboard
     .strip
-        $bg: #2d2d2d
-        background: $bg
+        background: $card
         padding: 2rem
         border-radius: 20px
         display: flex
@@ -45,4 +46,4 @@
             > div
                 max-width: 100%
                 &.alpha-picker > div > div:first-child > div
-                    background: $bg!important
+                    background: $card!important
