--- a/app/src/styles/dashboard/musicSyncControls.sass
+++ b/app/src/styles/dashboard/musicSyncControls.sass
@@ -1,9 +1,10 @@
+@import "../theme"
+
 .musicSyncControlsContainer
     display: flex
     align-items: center
     justify-content: center
     .musicSyncControls
-        background: lime
         margin-top: 4vh
         display: flex
         align-items: center
@@ -11,7 +12,7 @@
         flex-wrap: warp
         gap: 20px
         padding: 15px
-        background: #2d2d2d
+        background: $card
         border-radius: 20px
         .field
             width: min-content
@@ -20,17 +21,17 @@
             &.button
                 button
                     border: none
-                    background: #353535
+                    background: $light
                     border-radius: 20px
                     padding: 15px 20px
                     font-size: 18px
                     cursor: pointer
-                    box-shadow: 0px 0px 10px #232323
+                    box-shadow: 0px 0px 10px $bg
                     transition: box-shadow .3s ease-in-out
                     &:hover
-                        box-shadow: 0px 0px 20px 2px #232323
+                        box-shadow: 0px 0px 20px 2px $bg
                     &:active
-                        background: #3c3c3c
+                        background: $lighter
 
             &.bpmDisplay
                 .MuiTextField-root
