--- a/app/src/styles/pointerSlider.sass
+++ b/app/src/styles/pointerSlider.sass
@@ -1,4 +1,5 @@
 @use "sass:math"
+@import "theme"
 
 .PointerSlider
     position: relative
@@ -6,7 +7,7 @@
         position: absolute
         .MuiSlider-thumb
             transition: left .1s linear
-            color: #00c94f
+            color: $accent
             pointer-events: none
             transform: translateY(20px)
             border-radius: 0
