--- a/app/src/styles/slider.sass
+++ b/app/src/styles/slider.sass
@@ -1,9 +1,10 @@
+@import "theme"
 
 .sliderContainer
     .track
         width: 100%
         border-radius: 10px
-        background: grey
+        background: $grey
         position: relative
         .muiSlider
             position: absolute
@@ -16,8 +17,8 @@
                 height: $height
                 width: $width
                 border-radius: 10px
-                outline: 3px solid grey
-                background: #202124
+                outline: 3px solid $grey
+                background: $bg
                 // transition: all .2s ease-in-out
                 &.active
                     // outline-width: 10px
@@ -27,7 +28,7 @@
                     box-shadow: none
             .MuiSlider-mark
                 height: 12px
-                background: grey
+                background: $grey
                 border-radius: 10px
             .MuiSlider-rail
                 opacity: 0
