--- a/app/src/styles/index.sass
+++ b/app/src/styles/index.sass
@@ -32,3 +32,10 @@ body
         width: 6px
         border-radius: 100px
         
+
+div.dashboard.loading 
+    height: 100%
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-direction: column
