added (animated) color chips on presets

--- a/app/src/styles/dashboard/preset.sass
+++ b/app/src/styles/dashboard/preset.sass
@@ -39,10 +39,17 @@
                     &:hover 
                         color: #f44336
             .previewContainer
-                    height: 5px
-                    width: 100%
-                    border-radius: 20px
-                    overflow: hidden
+                height: 8px
+                width: 100%
+                border-radius: 20px
+                overflow: hidden
+                display: flex
+                flex-wrap: wrap
+                gap: 5%
+                .colorChip
+                    border-radius: 10px
+                    height: 100%
+                    flex: 1
             .preview
                 height: 100%
                 width: 100%
