moved things up

--- a/app/src/styles/editEffect.sass
+++ b/app/src/styles/editEffect.sass
@@ -49,7 +49,7 @@
     #controls
         padding: 30px
         display: flex
-        align-items: center
+        align-items: flex-start
         justify-content: space-around
         flex-direction: row
         flex-wrap: wrap
