--- a/app/src/styles/cubicBezierEditor.sass
+++ b/app/src/styles/cubicBezierEditor.sass
@@ -16,3 +16,23 @@
         background: #242424
         aspect-ratio: 1/1
         width: calc(100% - 2 * $margin)
+
+    .inputs 
+        table
+            margin-top: 20px
+            border: 1px solid #4e4e4e
+            padding: 10px
+            border-radius: 10px
+
+            td
+                text-align: center
+        input
+
+            background: transparent
+            color: white
+            border: 1px solid #4e4e4e
+            border-radius: 10px
+            font-size: 17px
+            width: 50px
+            padding: 4px
+            text-align: center
